--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                     <div class="card mb-4 shadow-sm animate__animated animate__fadeInLeft">
                         <img src="project1.jpg" class="card-img-top" alt="Project 1">
                         <div class="card-body">
-                            <h5 class="card-title">Project 1</h5>
-                            <p class="card-text">Description of Project 1.</p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <h5 class="card-title">Ar Canvas</h5>
+                            <p class="card-text">"Air Canvas" is a cutting-edge project showcasing a fusion of art and technology. Using motion-tracking sensors and augmented reality, it allows users to create digital art in mid-air. This innovative platform aims to redefine artistic expression, offering a dynamic and immersive experience for portfolios and demonstrating the intersection of creativity and advanced technology.</p>
+                            <a href="https://github.com/ADKDEV9/Air_canvas" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
                 </div>
-                <!-- Project 2 -->
+                <!---
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm animate__animated animate__fadeInUp">
                         <img src="project2.jpg" class="card-img-top" alt="Project 2">
@@ -106,14 +106,14 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project 3 -->
+                
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm animate__animated animate__fadeInRight">
                         <img src="project3.jpg" class="card-img-top" alt="Project 3">
                         <div class="card-body">
                             <h5 class="card-title">Project 3</h5>
                             <p class="card-text">Description of Project 3.</p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <a href="#" class="btn btn-primary">View Project</a> -- Project 2 -->
                         </div>
                     </div>
                 </div>
