--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                     <div class="card mb-4 shadow-sm animate__animated animate__fadeInLeft">
                         <img src="project1.jpg" class="card-img-top" alt="Project 1">
                         <div class="card-body">
-                            <h5 class="card-title">Ar Canvas</h5>
-                            <p class="card-text">"Air Canvas" is a cutting-edge project showcasing a fusion of art and technology. Using motion-tracking sensors and augmented reality, it allows users to create digital art in mid-air. This innovative platform aims to redefine artistic expression, offering a dynamic and immersive experience for portfolios and demonstrating the intersection of creativity and advanced technology.</p>
+                            <h5 class="card-title">AR Canvas</h5>
+                            <p class="card-text">"The AR Canvas project merges artistry with technology, enabling users to create digital art through intuitive hand gestures in a virtual space. It showcases innovation in digital creativity and interactive experiences, highlighting the seamless integration of augmented reality (AR) for dynamic artistic expression..</p>
                             <a href="https://github.com/ADKDEV9/Air_canvas" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
